@@ -1,4 +1,5 @@
 * 2007-07-12 - tobias.prinz@open-xchange.com
+
  - Bugfix #7732: An RRULE's COUNT property is now set as occurrence value
    for a CalendarObject.
 
@@ -7,6 +8,8 @@
  - Setting message's 'Organization' header surrounded by a try-catch clause
    in which a Throwable is caught thus sending a message is not aborted
    through a possible error while reading context admin's organization field
+ - New method in USerConfiguration to detect if user is allowed to see portal
+   page in GUI
 
 * 2007-07-11 - thorben.betten@open-xchange.com
 
